--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -117,7 +117,8 @@
       {% endif %}
       {% if author.wikipedia %}
         <li><a href="https://en.wikipedia.org/wiki/User:{{ author.wikipedia }}"><i class="fab fa-fw fa-wikipedia-w" aria-hidden="true"></i> Wikipedia</a></li>
-{% endif %}
+      {% endif %}
+      <li><script type="text/javascript" id="clstr_globe" src="//cdn.clustrmaps.com/globe.js?d=EhIljsuAyo5YiGZoxFOIhpJzSLCyixaQz328xMALzvI"></script></li>
     </ul>
   </div>
 </div>
